--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "outDir":"./lib",     //重定向输出目录。
     "watch":false,           //在监视模式下运行编译器。会监视输出文件，在它们改变时重新编译。
     "declaration": true,
-    "emitDecoratorMetadata": true,  // typeorm
-    "experimentalDecorators": true  // typeorm
+    "emitDecoratorMetadata": true,  // 装饰器
+    "experimentalDecorators": true  // 装饰器
   },
   "include":[
     "src/**/*"
